# codegraph

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  MONOREPO_MIGRATION_STATUS.md  NOTICE  PROJECT_SUMMARY.md  README.md  TODO.md  cobertura.xml
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  ci.yml.bak
.overstory/: config.yaml
.reuse/: dep5
benches/: graph_operations.rs
crates/codegraph/: Cargo.toml
crates/codegraph-c/: Cargo.toml
crates/codegraph-c/benches/: parsing.rs
crates/codegraph-c/examples/: analyze_errors.rs  test_tolerant_kernel.rs
crates/codegraph-c/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  preprocessor.rs  visitor.rs
crates/codegraph-c/tests/: integration_tests.rs
crates/codegraph-cobol/: Cargo.toml  build.rs
crates/codegraph-cobol/benches/: parsing.rs
crates/codegraph-cobol/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  ts_cobol.rs  visitor.rs
crates/codegraph-cobol/tests/: integration_tests.rs
crates/codegraph-cpp/: Cargo.toml
crates/codegraph-cpp/benches/: parsing.rs
crates/codegraph-cpp/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  visitor.rs
crates/codegraph-cpp/tests/: integration_tests.rs
crates/codegraph-csharp/: Cargo.toml
crates/codegraph-csharp/benches/: parsing.rs
crates/codegraph-csharp/src/: aspx.rs  extractor.rs  lib.rs  mapper.rs  parser_impl.rs  visitor.rs
crates/codegraph-csharp/tests/: integration_tests.rs
crates/codegraph-fortran/: Cargo.toml  build.rs
crates/codegraph-fortran/benches/: parsing.rs
crates/codegraph-fortran/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  ts_fortran.rs  visitor.rs
crates/codegraph-fortran/tests/: integration_tests.rs
crates/codegraph-go/: Cargo.toml
crates/codegraph-go/benches/: parsing.rs
crates/codegraph-go/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  visitor.rs
crates/codegraph-go/tests/: integration_tests.rs
crates/codegraph-java/: Cargo.toml
crates/codegraph-java/benches/: parsing.rs
crates/codegraph-java/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  visitor.rs
crates/codegraph-java/tests/: integration_tests.rs
crates/codegraph-kotlin/: Cargo.toml
crates/codegraph-kotlin/benches/: parsing.rs
crates/codegraph-kotlin/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  visitor.rs
crates/codegraph-kotlin/tests/: integration_tests.rs
crates/codegraph-parser-api/: Cargo.toml
crates/codegraph-parser-api/src/: complexity.rs  config.rs  errors.rs  ir.rs  lib.rs  metrics.rs  tests.rs  traits.rs
crates/codegraph-parser-api/src/entities/: class.rs  function.rs  mod.rs  module.rs  trait_.rs
crates/codegraph-parser-api/src/relationships/: calls.rs  implementations.rs  imports.rs  inheritance.rs  mod.rs  type_references.rs
crates/codegraph-php/: Cargo.toml
crates/codegraph-php/benches/: parsing.rs
crates/codegraph-php/examples/: basic_parse.rs
crates/codegraph-php/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  visitor.rs
crates/codegraph-php/tests/: integration_tests.rs
crates/codegraph-python/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PARSER_TRAIT_MIGRATION.md  README.md  TEST_COVERAGE_REPORT.md  cobertura.xml
crates/codegraph-python/.github/: copilot-instructions.md
crates/codegraph-python/benches/: parsing.rs
crates/codegraph-python/docs/: LANGUAGE_PARSER_GUIDE.md
crates/codegraph-python/examples/: basic_parse.rs  debug_calls.rs  parse_project.rs
crates/codegraph-python/scripts/: ci.sh
crates/codegraph-python/src/: builder.rs  config.rs  error.rs  extractor.rs  lib.rs  (+3 more)
crates/codegraph-ruby/: Cargo.toml
crates/codegraph-ruby/benches/: parsing.rs
crates/codegraph-ruby/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  visitor.rs
crates/codegraph-ruby/tests/: integration_tests.rs
crates/codegraph-rust/: Cargo.toml
crates/codegraph-rust/benches/: parsing.rs
crates/codegraph-rust/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  visitor.rs
crates/codegraph-rust/tests/: integration_tests.rs
crates/codegraph-swift/: Cargo.toml
crates/codegraph-tcl/: Cargo.toml  build.rs
crates/codegraph-typescript/: Cargo.toml  README.md
crates/codegraph-verilog/: Cargo.toml  build.rs
crates/codegraph-verilog/benches/: parsing.rs
crates/codegraph-verilog/src/: extractor.rs  lib.rs  mapper.rs  parser_impl.rs  ts_verilog.rs  visitor.rs
crates/codegraph-verilog/tests/: integration_tests.rs
crates/codegraph/benches/: graph_operations.rs
crates/codegraph/examples/: basic_usage.rs  dependency_tree.rs  inspect_db.rs  visualize.rs
crates/codegraph/src/: error.rs  helpers.rs  lib.rs  metadata.rs  query.rs
crates/codegraph/src/export/: dot.rs  json.rs
crates/codegraph/src/graph/: codegraph.rs  mod.rs  property.rs  types.rs
crates/codegraph/src/storage/: memory.rs  mod.rs  namespaced.rs  rocksdb_backend.rs
crates/codegraph/tests/integration/: large_graph_test.rs  memory_backend_test.rs
crates/codegraph/tests/unit/: algorithms_test.rs  export_test.rs  graph_ops_test.rs  mod.rs
docs/: C_PARSER_SUMMARY.md  c-parser-layered.md  codegraph-prd.md  parallel-metrics.md  parser-improvements-plan.md  tree-sitter-upgrade-assessment.md
docs/monorepo/: ARCHITECTURE.md  FILE_MANIFEST.txt  IMPLEMENTATION_CHECKLIST.md  MIGRATION_GUIDE.md  MONOREPO_DEV_GUIDE.md  PACKAGE_SUMMARY.md  PARSER_API_SPEC.md  QUICK_REFERENCE.md  README.md
examples/: basic_usage.rs  call_graph.rs  dependency_tree.rs  impact_analysis.rs  visualize.rs
scripts/: README.md  ci-checks.sh
src/: helpers.rs  lib.rs  query.rs
src/export/: csv.rs  dot.rs  json.rs  mod.rs  triples.rs
src/graph/: algorithms.rs  codegraph.rs  mod.rs  property.rs  types.rs
src/storage/: memory.rs  mod.rs  rocksdb_backend.rs
tests/integration/: crash_recovery_test.rs  large_graph_test.rs  memory_backend_test.rs  mod.rs  rocksdb_backend_test.rs
tests/unit/: algorithms_test.rs  edge_test.rs  export_test.rs  graph_ops_test.rs  helpers_test.rs  mod.rs  node_test.rs  property_test.rs  query_builder_test.rs
(+47 files in other folders)
