[workspace]
resolver = "2"

members = [
    "crates/codegraph",
    "crates/codegraph-parser-api",
    "crates/codegraph-python",
    "crates/codegraph-rust",
    "crates/codegraph-typescript",
    "crates/codegraph-go",
    "crates/codegraph-c",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/anvanster/codegraph"
authors = ["anvanster"]

[workspace.dependencies]
# Shared dependencies across all crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rocksdb = "0.22"
log = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Internal crates
codegraph = { path = "crates/codegraph", version = "0.1.1" }
codegraph-parser-api = { path = "crates/codegraph-parser-api", version = "0.2.0" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
