[package]
name = "codegraph-go"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Go parser for CodeGraph - extracts code entities and relationships from Go source files"
keywords = ["go", "golang", "parser", "code-analysis"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
# Workspace dependencies
codegraph.workspace = true
codegraph-parser-api.workspace = true
serde.workspace = true
thiserror.workspace = true

# Go parser
tree-sitter = "0.20"
tree-sitter-go = "0.20"

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.0"

[lib]
name = "codegraph_go"
path = "src/lib.rs"
