[package]
name = "codegraph-parser-api"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared API and types for CodeGraph language parsers"
keywords = ["parser", "code-analysis", "ast", "graph"]
categories = ["parser-implementations", "data-structures"]

[dependencies]
codegraph.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
