[package]
name = "codegraph-rust"
version = "0.1.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Rust parser for CodeGraph - extracts code entities and relationships from Rust source files"
keywords = ["rust", "parser", "code-analysis", "ast"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
# Workspace dependencies
codegraph.workspace = true
codegraph-parser-api.workspace = true
serde.workspace = true
thiserror.workspace = true

# Rust parser
syn = { version = "2.0", features = ["full", "visit", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
rayon = "1.10"

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.0"
criterion = "0.5"

[[bench]]
name = "parsing"
harness = false

[lib]
name = "codegraph_rust"
path = "src/lib.rs"
