[package]
name = "codegraph-verilog"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Verilog parser for CodeGraph - extracts code entities and relationships from Verilog source files"
keywords = ["verilog", "hdl", "parser", "code-analysis", "tree-sitter"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
codegraph.workspace = true
codegraph-parser-api.workspace = true
serde.workspace = true
thiserror.workspace = true

tree-sitter = "0.22"
rayon = "1.10"

[build-dependencies]
cc = "1.0"
# tree-sitter-verilog is listed here so cargo downloads its source to the registry.
# Our build.rs compiles parser.c directly (the 1.0 crate uses the newer tree-sitter-language
# API which is incompatible with tree-sitter 0.22, so we can't use it as a runtime dep).
tree-sitter-verilog = "1.0"

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.0"
criterion = "0.5"

[[bench]]
name = "parsing"
harness = false

[lib]
name = "codegraph_verilog"
path = "src/lib.rs"
